--- a/flashcards/flahcards.html
+++ b/flashcards/flahcards.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PAO Flashcards (00–99)</title>
+  <title>Flashcards (Libraries v3.2)</title>
   <style>
     :root { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
     body { display:flex; min-height:100vh; align-items:center; justify-content:center; background:#0b1020; color:#e8ecf1; padding:24px; }
-    .app { width: min(720px, 100%); }
+    .app { width: min(780px, 100%); }
     .card { border: 1px solid #26324d; border-radius: 16px; padding: 24px; background: #121a33; box-shadow: 0 10px 30px rgba(0,0,0,0.3); }
     .title { margin:0 0 10px; font-weight:700; letter-spacing:0.2px; }
-    .status { font-size: 14px; opacity: 0.85; margin-bottom: 16px; }
+    .status { font-size: 14px; opacity:0.85; margin-bottom:16px; }
     .grid { display:grid; grid-template-columns: 1fr; gap: 12px; }
     #cardBox { border: 1px dashed #324569; border-radius: 12px; padding: 24px; text-align:center; }
     #front { font-size: 28px; margin: 0 0 12px; }
@@ -18,7 +18,7 @@
     .row { display:flex; flex-wrap:wrap; gap: 10px; align-items:center; }
     button, label[for="file"] { cursor:pointer; border: 1px solid #2c3f66; background: #1a2750; color:#e8ecf1; padding:10px 14px; border-radius: 10px; font-size: 15px; }
     button:hover, label[for="file"]:hover { background:#223166; }
-    input[type="text"] { background:#0f1732; color:#e8ecf1; border:1px solid #26324d; border-radius:10px; padding:10px 12px; width:100%; }
+    select { background:#0f1732; color:#e8ecf1; border:1px solid #26324d; border-radius:10px; padding:10px 12px; }
     small.muted { color:#a8b6d9; opacity:0.8; }
     .kvs { font-size:14px; margin-top:8px; }
     .kvs code { background:#0f1732; padding:2px 6px; border-radius:6px; border:1px solid #26324d; }
@@ -27,19 +27,29 @@
 <body>
   <div class="app">
     <div class="card">
-      <h1 class="title">PAO Flashcards (00–99)</h1>
+      <h1 class="title">Flashcards (Libraries v3.2)</h1>
       <div class="status" id="status">Καμία βιβλιοθήκη φορτωμένη ακόμη.</div>
 
       <div class="grid">
         <div class="row">
-          <input id="path" type="text" value="LibraryP2 PAO 00-99.json" placeholder="Διαδρομή JSON (σχετική ή απόλυτη URL)" />
-          <button id="btnFetch">Φόρτωσε από διαδρομή</button>
+          <input id="file" type="file" accept=".json,application/json" style="display:none" />
+          <label for="file">Επίλεξε αρχείο JSON</label>
+          <small class="muted">Αν δεν φορτώσει αυτόματα.</small>
         </div>
 
         <div class="row">
-          <input id="file" type="file" accept=".json,application/json" style="display:none" />
-          <label for="file">Επίλεξε αρχείο JSON</label>
-          <small class="muted">Λειτουργεί χωρίς server.</small>
+          <label for="librarySelect">Βιβλιοθήκη:</label>
+          <select id="librarySelect">
+            <option value="PAO 00-99/LibraryDefaultP1">PAO 00-99 (P1)</option>
+            <option value="PAO 00-99/LibraryP2">PAO 00-99 (P2)</option>
+            <option value="PAO 00-99/LibraryP3">PAO 00-99 (P3)</option>
+            <option value="PAO 0-9/LibraryP1">PAO 0-9 (P1)</option>
+            <option value="Spatial/LibraryS1">Spatial S1</option>
+            <option value="Characters/LibraryC1">Characters C1</option>
+            <option value="Characters/LibraryC2">Characters C2</option>
+            <option value="Temporal/LibraryT1">Temporal T1</option>
+            <option value="Temporal/LibraryT2">Temporal T2</option>
+          </select>
         </div>
 
         <div id="cardBox">
@@ -60,35 +70,71 @@
   </div>
 
   <script>
-    /** State **/
     let pao = {};
     let keys = [];
     let currentKey = null;
     let showingAnswer = false;
+    window.lastData = null;
 
-    /** Helpers **/
-    function setStatus(msg, isError = false) {
+    function setStatus(msg, isError=false) {
       const el = document.getElementById("status");
       el.textContent = msg;
       el.style.color = isError ? "#ffb3b3" : "#a8f0c6";
     }
 
     function normalizeData(data) {
-      // Accept either the full wrapped structure or a direct map of "00".."99"
-      if (data && data["PAO 00-99"] && data["PAO 00-99"]["LibraryP2"]) {
-        return data["PAO 00-99"]["LibraryP2"];
+      const path = document.getElementById("librarySelect").value.split("/");
+      let obj = data;
+      for (let key of path) {
+        if (obj && obj[key]) obj = obj[key];
+        else return null;
       }
-      return data;
+
+      // Ειδική περίπτωση για PAO 0-9
+      if (obj.Persons && obj.Actions && obj.Objects) {
+        const combined = {};
+        for (let k of Object.keys(obj.Persons)) {
+          combined[k] = {
+            person: obj.Persons[k].el || obj.Persons[k].en || obj.Persons[k],
+            action: obj.Actions[k].el || obj.Actions[k].en || obj.Actions[k],
+            object: obj.Objects[k].el || obj.Objects[k].en || obj.Objects[k]
+          };
+        }
+        return combined;
+      }
+
+      return obj;
     }
 
     function loadPAOObject(obj) {
-      pao = normalizeData(obj) || {};
-      keys = Object.keys(pao).sort(); // deterministic order, then we randomize selection
+      pao = obj || {};
+      keys = Object.keys(pao).sort();
       if (!keys.length) {
-        throw new Error("Το JSON δεν περιέχει στοιχεία PAO.");
+        throw new Error("Το JSON δεν περιέχει στοιχεία.");
       }
       setStatus(`Φορτώθηκαν ${keys.length} κάρτες.`);
       nextCard();
+    }
+
+    function renderEntry(key, entry) {
+      if (!entry) return "—";
+
+      // PAO (00-99 & 0-9)
+      if (entry.person && entry.action && entry.object) {
+        return `${entry.person}${entry.occupation ? " ("+entry.occupation+")" : ""}\n${entry.action}\n${entry.object}`;
+      }
+
+      // Temporal / Spatial / Characters C1
+      if (entry.el && entry.en) {
+        return `${entry.el}\n${entry.en}`;
+      }
+
+      // Characters C2 (strings μόνο)
+      if (typeof entry === "string") {
+        return entry;
+      }
+
+      return JSON.stringify(entry, null, 2);
     }
 
     function nextCard() {
@@ -99,11 +145,9 @@
       showingAnswer = false;
       currentKey = keys[Math.floor(Math.random() * keys.length)];
       const entry = pao[currentKey];
-      document.getElementById("front").textContent = `Κωδικός: ${currentKey}${entry?.letters ? " — " + entry.letters : ""}`;
+      document.getElementById("front").textContent = `Κωδικός: ${currentKey}`;
       document.getElementById("back").style.display = "none";
-      document.getElementById("back").textContent = entry
-        ? `${entry.person} (${entry.occupation})\n${entry.action}\n${entry.object}`
-        : "—";
+      document.getElementById("back").textContent = renderEntry(currentKey, entry);
     }
 
     function showAnswer() {
@@ -113,24 +157,21 @@
       showingAnswer = true;
     }
 
-    /** Fetch by path/URL **/
-    async function fetchByPath(path) {
+    async function autoFetch() {
       try {
-        setStatus("Φόρτωση…");
-        // Encode only the path part; if it's an absolute URL we keep it as is
-        const isAbsolute = /^https?:\/\//i.test(path);
-        const url = isAbsolute ? path : encodeURI(path);
-        const res = await fetch(url, { cache: "no-cache" });
+        setStatus("Αυτόματη φόρτωση…");
+        const res = await fetch("libraries_v3.2.json", { cache:"no-cache" });
         if (!res.ok) throw new Error(`HTTP ${res.status} ${res.statusText}`);
         const data = await res.json();
-        loadPAOObject(data);
+        window.lastData = data;
+        const normalized = normalizeData(data);
+        loadPAOObject(normalized);
       } catch (err) {
-        console.error(err);
-        setStatus(`Αποτυχία φόρτωσης: ${err.message}. Αν άνοιξες το αρχείο απευθείας (file://), χρειάζεται τοπικός server ή φόρτωσε με "Επίλεξε αρχείο JSON".`, true);
+        console.warn("Αποτυχία αυτόματης φόρτωσης:", err.message);
+        setStatus("Δεν βρέθηκε libraries_v3.2.json. Επίλεξε αρχείο JSON.", true);
       }
     }
 
-    /** Load via File Picker (no server needed) **/
     function loadFromFile(file) {
       setStatus("Φόρτωση από αρχείο…");
       const reader = new FileReader();
@@ -138,7 +179,9 @@
       reader.onload = () => {
         try {
           const data = JSON.parse(reader.result);
-          loadPAOObject(data);
+          window.lastData = data;
+          const normalized = normalizeData(data);
+          loadPAOObject(normalized);
         } catch (e) {
           console.error(e);
           setStatus("Μη έγκυρο JSON.", true);
@@ -147,31 +190,17 @@
       reader.readAsText(file, "utf-8");
     }
 
-    /** Events **/
-    document.getElementById("btnFetch").addEventListener("click", () => {
-      const path = document.getElementById("path").value.trim();
-      if (!path) return setStatus("Δώσε διαδρομή JSON.", true);
-      fetchByPath(path);
-    });
-
     document.getElementById("file").addEventListener("change", (e) => {
       const file = e.target.files?.[0];
       if (file) loadFromFile(file);
     });
 
     document.getElementById("btnNext").addEventListener("click", () => {
-      if (showingAnswer) {
-        nextCard();
-      } else {
-        showAnswer();
-      }
+      if (showingAnswer) nextCard(); else showAnswer();
     });
 
-    document.getElementById("btnShow").addEventListener("click", () => {
-      showAnswer();
-    });
+    document.getElementById("btnShow").addEventListener("click", () => showAnswer());
 
-    // Spacebar toggles show/next
     window.addEventListener("keydown", (e) => {
       if (e.code === "Space") {
         e.preventDefault();
@@ -179,16 +208,21 @@
       }
     });
 
-    // Try auto-fetch on load using the default path (works only when served via http(s))
-    window.addEventListener("DOMContentLoaded", () => {
-      const defaultPath = document.getElementById("path").value.trim();
-      // Only auto-fetch when running on http(s) to avoid CORS/file:// issues
-      if (location.protocol.startsWith("http")) {
-        fetchByPath(defaultPath);
+    document.getElementById("librarySelect").addEventListener("change", () => {
+      if (!window.lastData) {
+        setStatus("Δεν έχει φορτωθεί ακόμη JSON.", true);
+        return;
+      }
+      const normalized = normalizeData(window.lastData);
+      if (normalized) {
+        loadPAOObject(normalized);
       } else {
-        setStatus("Άνοιξες το αρχείο τοπικά (file://). Χρησιμοποίησε «Επίλεξε αρχείο JSON» ή στήσε τοπικό server.", true);
+        setStatus("Δεν βρέθηκε η βιβλιοθήκη.", true);
       }
     });
+
+    // Αυτόματο load με το που ανοίξει η σελίδα
+    window.addEventListener("DOMContentLoaded", autoFetch);
   </script>
 </body>
 </html>
