--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .grid { display:grid; grid-template-columns: 1fr; gap: 12px; }
     #cardBox { border: 1px dashed #324569; border-radius: 12px; padding: 24px; text-align:center; }
     #front { font-size: 28px; margin: 0 0 12px; }
-    #back  { font-size: 20px; margin: 0; display:none; white-space: pre-line; }
+    #back  { font-size: 20px; margin: 0; display:none; white-space:pre-line; text-align:left; }
     .row { display:flex; flex-wrap:wrap; gap: 10px; align-items:center; }
     button, label[for="file"] { cursor:pointer; border: 1px solid #2c3f66; background: #1a2750; color:#e8ecf1; padding:10px 14px; border-radius: 10px; font-size: 15px; }
     button:hover, label[for="file"]:hover { background:#223166; }
@@ -22,6 +22,9 @@
     small.muted { color:#a8b6d9; opacity:0.8; }
     .kvs { font-size:14px; margin-top:8px; }
     .kvs code { background:#0f1732; padding:2px 6px; border-radius:6px; border:1px solid #26324d; }
+    .back-section { padding:10px; border-bottom:1px solid #324569; }
+    .back-section:last-child { border-bottom:none; }
+    #back-right { font-style:italic; }
   </style>
 </head>
 <body>
@@ -43,6 +46,7 @@
             <option value="PAO 00-99/LibraryDefaultP1">PAO 00-99 (P1)</option>
             <option value="PAO 00-99/LibraryP2">PAO 00-99 (P2)</option>
             <option value="PAO 00-99/LibraryP3">PAO 00-99 (P3)</option>
+            <option value="PAO 00-99/LibraryP4">PAO 00-99 (P4)</option>
             <option value="PAO 0-9/LibraryP1">PAO 0-9 (P1)</option>
             <option value="Spatial/LibraryS1">Spatial S1</option>
             <option value="Characters/LibraryC1">Characters C1</option>
@@ -54,7 +58,12 @@
 
         <div id="cardBox">
           <div id="front">—</div>
-          <p id="back">—</p>
+          <div id="back">
+            <div class="back-section" id="back-code"></div>
+            <div class="back-section" id="back-left"></div>
+            <div class="back-section" id="back-loci"></div>
+            <div class="back-section" id="back-right"></div>
+          </div>
         </div>
 
         <div class="row">
@@ -90,7 +99,6 @@
         else return null;
       }
 
-      // Ειδική περίπτωση για PAO 0-9
       if (obj.Persons && obj.Actions && obj.Objects) {
         const combined = {};
         for (let k of Object.keys(obj.Persons)) {
@@ -102,16 +110,13 @@
         }
         return combined;
       }
-
       return obj;
     }
 
     function loadPAOObject(obj) {
       pao = obj || {};
       keys = Object.keys(pao).sort();
-      if (!keys.length) {
-        throw new Error("Το JSON δεν περιέχει στοιχεία.");
-      }
+      if (!keys.length) throw new Error("Το JSON δεν περιέχει στοιχεία.");
       setStatus(`Φορτώθηκαν ${keys.length} κάρτες.`);
       nextCard();
     }
@@ -119,21 +124,31 @@
     function renderEntry(key, entry) {
       if (!entry) return "—";
 
-      // PAO (00-99 & 0-9)
       if (entry.person && entry.action && entry.object) {
-        return `${entry.person}${entry.occupation ? " ("+entry.occupation+")" : ""}\n${entry.action}\n${entry.object}`;
+        const lociEntries = window.lastData?.Temporal?.LibraryT1 || {};
+        const lociKeys = Object.keys(lociEntries);
+        const randomLoci = lociEntries[lociKeys[Math.floor(Math.random() * lociKeys.length)]];
+        const loci = randomLoci?.el || randomLoci?.en || "";
+
+        const left = `${entry.person}\n${entry.action}\n${entry.object}`;
+        const patterns = [
+          `Ο ${entry.person} ${entry.action} το ${entry.object} δίπλα από τη ${loci}.`,
+          `Ο ${entry.person} ${entry.action} το ${entry.object} μέσα στη ${loci}.`,
+          `Ο ${entry.person} ${entry.action} το ${entry.object} κάτω από τη σκιά της ${loci}.`,
+          `Ο ${entry.person} ${entry.action} το ${entry.object} καθισμένος στη ${loci}.`,
+          `Ο ${entry.person} ${entry.action} το ${entry.object} έχοντας φόντο τη ${loci}.`
+        ];
+        const right = patterns[Math.floor(Math.random() * patterns.length)];
+
+        document.getElementById("back-code").textContent = `Κωδικός: ${key}`;
+        document.getElementById("back-left").textContent = left;
+        document.getElementById("back-loci").textContent = loci;
+        document.getElementById("back-right").textContent = right;
+        return "";
       }
 
-      // Temporal / Spatial / Characters C1
-      if (entry.el && entry.en) {
-        return `${entry.el}\n${entry.en}`;
-      }
-
-      // Characters C2 (strings μόνο)
-      if (typeof entry === "string") {
-        return entry;
-      }
-
+      if (entry.el && entry.en) return `${entry.el}\n${entry.en}`;
+      if (typeof entry === "string") return entry;
       return JSON.stringify(entry, null, 2);
     }
 
@@ -147,7 +162,13 @@
       const entry = pao[currentKey];
       document.getElementById("front").textContent = `Κωδικός: ${currentKey}`;
       document.getElementById("back").style.display = "none";
-      document.getElementById("back").textContent = renderEntry(currentKey, entry);
+      const result = renderEntry(currentKey, entry);
+      if (result) {
+        document.getElementById("back-code").textContent = `Κωδικός: ${currentKey}`;
+        document.getElementById("back-left").textContent = result;
+        document.getElementById("back-loci").textContent = "";
+        document.getElementById("back-right").textContent = "";
+      }
     }
 
     function showAnswer() {
@@ -160,7 +181,7 @@
     async function autoFetch() {
       try {
         setStatus("Αυτόματη φόρτωση…");
-        const res = await fetch("libraries_v3.2.json", { cache:"no-cache" });
+        const res = await fetch("libraries_v3.2.json?ts=" + Date.now(), { cache:"no-store" });
         if (!res.ok) throw new Error(`HTTP ${res.status} ${res.statusText}`);
         const data = await res.json();
         window.lastData = data;
@@ -190,7 +211,7 @@
       reader.readAsText(file, "utf-8");
     }
 
-    document.getElementById("file").addEventListener("change", (e) => {
+    document.getElementById("file").addEventListener("change", e => {
       const file = e.target.files?.[0];
       if (file) loadFromFile(file);
     });
@@ -201,7 +222,7 @@
 
     document.getElementById("btnShow").addEventListener("click", () => showAnswer());
 
-    window.addEventListener("keydown", (e) => {
+    window.addEventListener("keydown", e => {
       if (e.code === "Space") {
         e.preventDefault();
         if (showingAnswer) nextCard(); else showAnswer();
@@ -214,14 +235,10 @@
         return;
       }
       const normalized = normalizeData(window.lastData);
-      if (normalized) {
-        loadPAOObject(normalized);
-      } else {
-        setStatus("Δεν βρέθηκε η βιβλιοθήκη.", true);
-      }
+      if (normalized) loadPAOObject(normalized);
+      else setStatus("Δεν βρέθηκε η βιβλιοθήκη.", true);
     });
 
-    // Αυτόματο load με το που ανοίξει η σελίδα
     window.addEventListener("DOMContentLoaded", autoFetch);
   </script>
 </body>
