--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
       
  <button disabled
     style="background:#1a2750; border:1px solid #2c3f66; color:#e8ecf1;
-           padding:6px 12px; border-radius:8px; font-size:14px; margin:3px;
-           cursor:pointer; transition:background 0.2s, transform 0.15s;">
+           padding:6px 12px; border-radius:8px; font-size:14px; margin:3px;">
     ... or press Space
   </button>
   
@@ -376,5 +375,6 @@
 </script>
 </body>
 </html>
+
 
 
