--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div id="codingBox" class="card">
       <h2 class="title">Κωδικοποίηση 0–9</h2>
       <table id="codingTable">
-        <thead><tr><th>Αριθμός</th><th>P</th><th>A</th><th>O</th></tr></thead>
+        <thead><tr><th>Αριθμός</th><th>P<br>(Dominic System)</th><th>A<br>(Major System)</th><th>O<br>(Shape System)</th></tr></thead>
         <tbody>
           <tr><td>0</td><td>O / Ο</td><td>S,Z / Σ,Ζ</td><td>Ντόνατ</td></tr>
           <tr><td>1</td><td>A / Α</td><td>T,D / Τ,Ντ</td><td>Κερί</td></tr>
@@ -375,6 +375,7 @@
 </script>
 </body>
 </html>
+
 
 
 
