--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
     const combined = {};
     for (let i = 0; i <= 9; i++) {
       combined[i] = {
-        person: obj.persons[i].el || obj.persons[i].en || obj.persons[i],
-        action: obj.actions[i].el || obj.actions[i].en || obj.actions[i],
-        object: obj.objects[i].el || obj.objects[i].en || obj.objects[i]
+      person: "P: " + (obj.persons[i].el || obj.persons[i].en || obj.persons[i]),
+      action: "A: " + (obj.actions[i].el || obj.actions[i].en || obj.actions[i]),
+      object: "O: " + (obj.objects[i].el || obj.objects[i].en || obj.objects[i])
       };
     }
     return combined;
@@ -215,9 +215,9 @@
     const combined = {};
     for (let k of Object.keys(obj.Persons)) {
       combined[k] = {
-        person: obj.Persons[k].el || obj.Persons[k].en || obj.Persons[k],
-        action: obj.Actions[k].el || obj.Actions[k].en || obj.Actions[k],
-        object: obj.Objects[k].el || obj.Objects[k].en || obj.Objects[k]
+      person: "P: " + (obj.Persons[k].el || obj.Persons[k].en || obj.Persons[k]),
+      action: "A: " + (obj.Actions[k].el || obj.Actions[k].en || obj.Actions[k]),
+      object: "O: " + (obj.Objects[k].el || obj.Objects[k].en || obj.Objects[k])
       };
     }
     return combined;
@@ -375,6 +375,7 @@
 </script>
 </body>
 </html>
+
 
 
 
