--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
     const combined = {};
     for (let i = 0; i <= 9; i++) {
       combined[i] = {
-      person: "P: " + (obj.persons[i].el || obj.persons[i].en || obj.persons[i]),
-      action: "A: " + (obj.actions[i].el || obj.actions[i].en || obj.actions[i]),
-      object: "O: " + (obj.objects[i].el || obj.objects[i].en || obj.objects[i])
+      person: P: + (obj.persons[i].el || obj.persons[i].en || obj.persons[i]),
+      action: A: + (obj.actions[i].el || obj.actions[i].en || obj.actions[i]),
+      object: O: + (obj.objects[i].el || obj.objects[i].en || obj.objects[i])
       };
     }
     return combined;
@@ -377,6 +377,7 @@
 </script>
 </body>
 </html>
+
 
 
 
