--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
   </style>
 </head>
 <body>
-<header>
+<header style="font-family: Georgia, serif; color: white;">
   <a href="https://markellos-chess-mnemonic-system.blogspot.com/" 
      style="text-decoration:none; font-size:23px; margin-right:10px;">
     ⬅ Αρχική
   </a>
-  <h1>Markellos Flashcards for the Chess Mnemonic System v.5.3</h1>
+  <h1 style="margin:0;">Markellos Flashcards for the Chess Mnemonic System v.5.3</h1>
 </header>
 	
 	<div class="app">
@@ -383,6 +383,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
