--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-<header style="font-family: Georgia, serif; color: white;">
+<header style="font-family: Georgia, serif; color: white; background:#222; padding:10px;">
   <a href="https://markellos-chess-mnemonic-system.blogspot.com/" 
      style="text-decoration:none; font-size:23px; margin-right:10px;">
     ⬅ Αρχική
@@ -383,6 +383,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
