--- a/index.html
+++ b/index.html
@@ -63,13 +63,11 @@
   </style>
 </head>
 <body>
-<header style="font-family: Georgia, serif; color:white !important; background:#222; padding:10px;">
-  <a href="https://markellos-chess-mnemonic-system.blogspot.com/" 
-     style="text-decoration:none; font-size:23px; margin-right:10px;">
-    ⬅ Αρχική
-  </a>
+<header>
   <h1 style="margin:0;">Markellos Flashcards for the Chess Mnemonic System v.5.3</h1>
 </header>
+
+<a href="https://markellos-chess-mnemonic-system.blogspot.com/" style="font-family: Georgia, serif; color:white !important; background:#222; padding:10px;"> ⬅ Blog</a>
 	
 	<div class="app">
     
@@ -383,6 +381,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
