--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h1 style="margin:0;">Markellos Flashcards for the Chess Mnemonic System v.5.3</h1>
 </header>
 
-<a href="https://markellos-chess-mnemonic-system.blogspot.com/" style="font-family: Georgia, serif; color:white !important; background:#222; padding:10px;"> ⬅ Blog</a>
+<a href="https://markellos-chess-mnemonic-system.blogspot.com/" style="font-family: Georgia, serif; color:white !important; background:#222;"><h2> ⬅ Blog</h2></a>
 	
 	<div class="app">
     
@@ -381,6 +381,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
