--- a/index.html
+++ b/index.html
@@ -250,13 +250,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
       const lociValue = randomLoci?.el || randomLoci?.en || "";
       const loci = "Random Locus: " + lociValue;
       const left = `Person: ${entry.person}\nAction: ${entry.action}\nObject: ${entry.object}`;
-      const patterns = [
-        `Παράδειγμα πρότασης:  Ο/Η ${entry.person} ${entry.action} (το/ένα/μία) ${entry.object} δίπλα από τη(ν)/το(ν) ${loci}.`,
-        `Παράδειγμα πρότασης:  Ο/Η ${entry.person} ${entry.action} (το/ένα/μία) ${entry.object} μέσα στη(ν)/στο(ν) ${loci}.`,
-        `Παράδειγμα πρότασης:  Ο/Η ${entry.person} ${entry.action} (το/ένα/μία) ${entry.object} κάτω από τη σκιά της/του ${loci}.`,
-        `Παράδειγμα πρότασης:  Ο/Η ${entry.person} ${entry.action} (το/ένα/μία) ${entry.object} καθισμένος στη(ν)/στο(ν) ${loci}.`,
-        `Παράδειγμα πρότασης:  Ο/Η ${entry.person} ${entry.action} (το/ένα/μία) ${entry.object} έχοντας φόντο τη(ν)/το(ν) ${loci}.`
-      ];
+      const patterns = [`Παράδειγμα πρότασης:  Ο/Η ${entry.person} ${entry.action} (το/ένα/μία) ${entry.object} δίπλα από τη(ν)/το(ν) ${loci}.`];
       const right = patterns[Math.floor(Math.random() * patterns.length)];
 
       document.getElementById("back-code").textContent = `Κωδικός: ${key}`;
@@ -381,6 +375,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
