--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
       const lociValue = randomLoci?.el || randomLoci?.en || "";
       const loci = "Random Locus: " + lociValue;
       const left = `Person: ${entry.person}\nAction: ${entry.action}\nObject: ${entry.object}`;
-      const patterns = [`Παράδειγμα πρότασης:  ${entry.person} ${entry.action} ${entry.object} ${loci}.`];
+      const patterns = [`Συνδυασμός:  ${entry.person} ${entry.action} ${entry.object} ${loci}];
       const right = patterns[Math.floor(Math.random() * patterns.length)];
 
       document.getElementById("back-code").textContent = `Κωδικός: ${key}`;
@@ -375,6 +375,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
