--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
       const loci = "Random Locus: " + lociValue;
       const left = `Person: ${entry.person}\nAction: ${entry.action}\nObject: ${entry.object}`;
       const patterns = [
-        `Παράδειγμα: ${entry.person} ${entry.action} ${entry.object}.`
+        `Παράδειγμα: ${entry.person} ${entry.action} ${entry.object} ${loci}`
       ];
       const right = patterns[Math.floor(Math.random() * patterns.length)];
 
@@ -377,6 +377,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
