--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <!-- Κάτω σειρά: Κωδικοποίηση -->
     <div id="codingBox" class="card">
-      <h2 class="title">Κωδικοποίηση σε PAO 0–9</h2>
+      <h2 class="title">Κωδικοποίηση PAO 00–99</h2>
       <table id="codingTable">
         <thead><tr><th>Αριθμός</th><th>Person<br>(Dominic System)</th><th>Action<br>(Major System)</th><th>Object<br>(Shape System)</th></tr></thead>
         <tbody>
@@ -375,6 +375,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
