--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 </header>
 	
 <a href="https://markellos-chess-mnemonic-system.blogspot.com/" style="font-family: Georgia, serif; color:white !important; background:#222;"><h2> ⬅ Blog</h2></a>
-	</br>
+<a href="https://markellos-chess-mnemonic-system.blogspot.com/" style="font-family: Georgia, serif; color:white !important; background:#222;"><h2> ⬅ Blog</h2></a>
+</br>
 	<div class="app">
     
 	<!-- Στήλη 1: Flashcards -->
@@ -375,6 +376,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
