--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
 <header>
-  <h1 style="margin:0;">Markellos Flashcards for the Chess Mnemonic System v.5.3</h1>
+  <h1 style="margin:0;">Markellos Flashcards - a help to learn the Chess Mnemonic System (CMS)</h1>
 </header>
 	
 <a href="https://markellos-chess-mnemonic-system.blogspot.com/" style="font-family: Georgia, serif; color:white !important; background:#222;"><h2> ⬅ Blog</h2></a>
@@ -376,6 +376,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
