--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
 	<!-- Στήλη 1: Flashcards -->
     <div class="card">
-      <h1 class="title">Flashcards (Libraries v3.2)</h1>
+      <h1 class="title">Flashcards (libraries)</h1>
       <div class="status" id="status">Καμία βιβλιοθήκη φορτωμένη ακόμη.</div>
       <div class="grid">
         <div class="row">
@@ -376,6 +376,7 @@ if (obj.Persons && obj.Actions && obj.Objects) {
 </script>
 </body>
 </html>
+
 
 
 
